feat: add building management and admin reporting