@@ -1,15 +1,16 @@
 package com.example.dorm.service;
 
+import com.example.dorm.model.Building;
 import com.example.dorm.model.Room;
+import com.example.dorm.repository.BuildingRepository;
 import com.example.dorm.repository.RoomRepository;
 import com.example.dorm.repository.StudentRepository;
-import org.springframework.stereotype.Service;
 import jakarta.persistence.EntityNotFoundException;
-
-
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
 import java.util.Optional;
 
@@ -18,12 +19,15 @@ public class RoomService {
 
     private final RoomRepository roomRepository;
     private final StudentRepository studentRepository;
+    private final BuildingRepository buildingRepository;
 
-    public RoomService(RoomRepository roomRepository, StudentRepository studentRepository) {
+    public RoomService(RoomRepository roomRepository,
+                       StudentRepository studentRepository,
+                       BuildingRepository buildingRepository) {
         this.roomRepository = roomRepository;
         this.studentRepository = studentRepository;
+        this.buildingRepository = buildingRepository;
     }
-
 
     public Page<Room> getAllRooms(Pageable pageable) {
         return roomRepository.findAll(pageable);
@@ -41,12 +45,15 @@ public class RoomService {
         return getRoom(id).orElseThrow(() -> new IllegalArgumentException("Room not found"));
     }
 
-    public Room createRoom(Room room) {
+    public Room createRoom(Room room, Long buildingId) {
         String normalizedNumber = normalizeNumber(room.getNumber());
         ensureUniqueNumber(normalizedNumber, null);
 
         room.setNumber(normalizedNumber);
-        room.setPrice(resolvePrice(room));
+        room.setType(normalizeType(room.getType()));
+        room.setCapacity(normalizeCapacity(room.getCapacity()));
+        room.setPrice(normalizePrice(room));
+        room.setBuilding(getRequiredBuilding(buildingId));
         return roomRepository.save(room);
     }
 
@@ -56,17 +63,16 @@ public class RoomService {
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy phòng: " + id));
     }
 
-
-
-    public Room updateRoom(Long id, Room room) {
+    public Room updateRoom(Long id, Room room, Long buildingId) {
         Room existing = getRequiredRoom(id);
         String normalizedNumber = normalizeNumber(room.getNumber());
         ensureUniqueNumber(normalizedNumber, id);
 
         existing.setNumber(normalizedNumber);
-        existing.setType(room.getType());
-        existing.setCapacity(room.getCapacity());
-        existing.setPrice(resolvePrice(room));
+        existing.setType(normalizeType(room.getType()));
+        existing.setCapacity(normalizeCapacity(room.getCapacity()));
+        existing.setPrice(normalizePrice(room));
+        existing.setBuilding(getRequiredBuilding(buildingId));
         return roomRepository.save(existing);
     }
 
@@ -78,28 +84,54 @@ public class RoomService {
         return studentRepository.countByRoom_Id(roomId);
     }
 
-    public Page<Room> searchRooms(String search, Pageable pageable) {
-        if (search == null || search.trim().isEmpty()) {
-            return roomRepository.findAll(pageable);
-        }
-        return roomRepository.findByNumberContainingIgnoreCaseOrTypeContainingIgnoreCase(search, search, pageable);
+    public Page<Room> searchRooms(String search, Long buildingId, Pageable pageable) {
+        String normalizedSearch = (search == null || search.isBlank()) ? null : search.trim();
+        return roomRepository.searchByKeywordAndBuilding(normalizedSearch, buildingId, pageable);
+    }
+
+    public List<Room> getRoomsByBuilding(Long buildingId) {
+        return roomRepository.findByBuilding_IdOrderByNumberAsc(buildingId);
     }
 
     public long countRooms() {
         return roomRepository.count();
     }
 
-    private int resolvePrice(Room room) {
+    public long sumCapacity() {
+        return roomRepository.sumCapacityByBuilding(null);
+    }
+
+    public long countOccupiedBeds() {
+        return studentRepository.countByRoomIsNotNull();
+    }
+
+    private int normalizeCapacity(int capacity) {
+        if (capacity <= 0) {
+            throw new IllegalArgumentException("Sức chứa phải lớn hơn 0");
+        }
+        return capacity;
+    }
+
+    private String normalizeType(String type) {
+        return type == null ? null : type.trim();
+    }
+
+    private int normalizePrice(Room room) {
+        int price = room.getPrice();
+        if (price > 0) {
+            return price;
+        }
         String type = room.getType();
         if (type == null) {
-            return room.getPrice();
+            throw new IllegalArgumentException("Giá phòng phải lớn hơn 0");
         }
         return switch (type) {
             case "Phòng bốn" -> 2_000_000;
             case "Phòng tám" -> 1_200_000;
-            default -> room.getPrice();
+            default -> throw new IllegalArgumentException("Giá phòng phải lớn hơn 0");
         };
     }
+
     private String normalizeNumber(String number) {
         return number == null ? null : number.trim();
     }
@@ -115,5 +147,13 @@ public class RoomService {
                     throw new IllegalArgumentException(
                             "Phòng \"" + existing.getNumber() + "\" đã tồn tại, vui lòng nhập tên phòng khác.");
                 });
+    }
+
+    private Building getRequiredBuilding(Long buildingId) {
+        if (buildingId == null) {
+            throw new IllegalArgumentException("Vui lòng chọn tòa nhà");
+        }
+        return buildingRepository.findById(buildingId)
+                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy tòa nhà với ID: " + buildingId));
     }
 }
